codama-syn-helpers/tests/meta/as_path_list/from_verbatim.fail.rs
use codama_syn_helpers_test_macros::as_path_list;

#[as_path_list([==> ??? <==])]
pub struct Test;

fn main() {}
